[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/hack_regular_small_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://cursor_item.gd" type="Script" id=2]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 1 )

[node name="CursorItem" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -903.0
margin_bottom = -570.0
rect_min_size = Vector2( 0, 30 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectionBG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.156863, 0.266667, 0.356863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HB" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HB"]
margin_top = 5.0
margin_right = 8.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 1 )
text = "a"

[node name="Spacer" type="Control" parent="HB"]
margin_left = 12.0
margin_right = 20.0
margin_bottom = 27.0
rect_min_size = Vector2( 8, 0 )

[node name="HSlider" type="HSlider" parent="HB"]
margin_left = 24.0
margin_right = 137.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 1.0
step = 0.1
value = 0.4

[node name="SpinBox" type="SpinBox" parent="HB"]
margin_left = 141.0
margin_right = 263.0
margin_bottom = 27.0
theme = SubResource( 1 )

[node name="Button" type="Button" parent="HB"]
margin_left = 267.0
margin_right = 287.0
margin_bottom = 27.0
text = "*"
[connection signal="value_changed" from="HB/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="HB/SpinBox" to="." method="_on_SpinBox_value_changed"]
